--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ bcrypt==3.2.0
 blinker==1.4
 boto3==1.17.109
 botocore==1.20.109
+certifi==2021.10.8
 cffi==1.14.6
+charset-normalizer==2.0.12
 click==8.0.1
 dnspython==2.2.1
 email-validator==1.1.3
@@ -29,6 +31,7 @@ pycparser==2.20
 python-dateutil==2.8.1
 python-dotenv==0.18.0
 pytz==2022.1
+requests==2.27.1
 s3transfer==0.4.2
 six==1.16.0
 speaklater==1.3
